# Mars-Big-Data

./: .gitignore  README.md  pyproject.toml
mars_bigdata/: main.py  mars_data_weather.json
mars_bigdata/pages/: 1_Intro.py  2_Målgrupp.py  3_DataInsamling.py  4_DataLagring.py  5_Datahantering.py  6_Visualisering.py  7_FeedbackLoop.py  8_Summering.py  mars_data_weather.json
