[tool.poetry]
name = "mars-bigdata"
version = "0.1.0"
description = ""
authors = ["JesperMorais <jeppe.morris@hotmail.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pandas = "^2.2.2"
streamlit = "^1.34.0"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
